--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-#logging.level.org.springframework = debug
+logging.level.org.springframework = info
+spring.security.user.name= atikash
+spring.security.user.password = dummy
