--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 logging.level.org.springframework = info
-spring.security.user.name= atikash
-spring.security.user.password = dummy
+#spring.security.user.name= atikash
+#spring.security.user.password = dummy
+
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
+#spring.main.allow-bean-definition-overriding=true
