--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
 #spring.main.allow-bean-definition-overriding=true
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
