fixed missing changes for JPA_SQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,12 @@ jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
 #spring.main.allow-bean-definition-overriding=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
+#for the first time use ddl-auto=create and then change it to update
 spring.datasource.url=jdbc:mysql://localhost:3306/todo
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
